classDiagram
    class CollectionModel {
        <<Spring HATEOAS>>
        +of(content, links) CollectionModel
        +getContent() Collection
        +getLinks() Links
    }

    class EntityModel {
        <<Spring HATEOAS>>
        +of(content, links) EntityModel
        +getContent() T
        +getLinks() Links
    }

    class Link {
        <<Spring HATEOAS>>
        +getRel() LinkRelation
        +getHref() String
    }

    class UsersController {
        +getAll() ResponseEntity~CollectionModel~
    }

    class LayoutsController {
        +getAll() ResponseEntity~CollectionModel~
    }

    class CampaignsController {
        +getAll() ResponseEntity~CollectionModel~
    }

    class TemplatesController {
        +getAll() ResponseEntity~CollectionModel~
    }

    CollectionModel "1" --> "0..*" EntityModel : contains
    CollectionModel "1" --> "1" Link : self rel
    EntityModel "1" --> "1" Link : self rel
    UsersController --> CollectionModel : returns
    LayoutsController --> CollectionModel : returns
    CampaignsController --> CollectionModel : returns
    TemplatesController --> CollectionModel : returns
